--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-01  Michael Gogins <gogins@pipeline.com>
+	* Updated CsoundVST code to use Istvan Varga's MIDI driver system,
+	so that CsoundVST works again as a VST plugin, at least in 
+	"Csound classic" mode.
+
 2005-03-01	Istvan Varga	<istvan@csounds.com>
 	* Opcodes/gab/gab.c:
 	  fixes in Maldonado opcodes
