--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-03-07  Michael Gogins <gogins@pipeline.com>
+	* Added CsoundVST, Loris, and the Csound API headers and libraries
+	to the install target in SConstruct.
+	* Updated Loris with sources from Loris CVS. Note: lorismorph doesn't
+	work and is awaiting fixes from Kelly Fitz. Other loris opcodes may 
+	be broken as well. However, the Loris Python extension module built
+	here does seem to work.
+
 2005-03-07	Istvan Varga	<istvan@csounds.com>
 	* Engine/entry2.c:
 	  removed event_set; no longer needed
