Run miditempo opcode both at init and performance time

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-10	Istvan Varga	<istvan@csounds.com>
+	* Engine/entry2.c:
+	  run miditempo opcode both at init and performance time
+
 2005-03-09	Istvan Varga	<istvan@csounds.com>
 	* Engine/insert.c:
 	* OOps/schedule.c:
