--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-15  Michael Gogins <gogins@pipeline.com>
+	* The Loris opcodes now work.
+	* Removed pyrun.dll and -lswigpy from SConstruct,
+	as SWIG 1.3.24 (current stable version) does not use it.
+	* Added option to not build Java wrappers.
+	* Removed documentation from the Windows installer.
+
 2005-03-15  John ffitch  <jpff@cs.bath.ac.uk>
 
 	* H/soundio.h (SOUNDIN): 
