--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* The Loris opcodes now work.
 	* Removed pyrun.dll and -lswigpy from SConstruct,
 	as SWIG 1.3.24 (current stable version) does not use it.
+	* The Java wrappers are now built as a jar containing
+	the CsoundVST package.
 	* Added option to not build Java wrappers; as a result,
 	CsoundVST builds on Linux again.
 	* Removed documentation from the Windows installer.
