--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-03	Steven Yi		<stevenyi@gmail.com>
+	* SConstruct: added arch and cpu commandline options to fine tune gcc3opt
+	  flags for -march and -mcpu
+
 2005-04-03	Istvan Varga	<istvan@csounds.com>
 	* removed macro definitions for ksmps, esr, ekr, and some others;
 	  use csound->Message() instead of printf() and err_printf();
