--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-12  John ffitch  <jpff@codemist.co.uk>
+
+	* Opcodes/wave-terrain.c (wtPerf): Improved phase accumulation problem
+
 2005-04-10  Michael Gogins <gogins@pipeline.com>
 	* Updated the STK opcodes to take from 0 to 4 optional
 	krate controller-value pairs.
